concord_macros/tests/trybuild/fail/codegen/buffered_endpoint_execute_records.stderr
error[E0599]: the method `execute_records` exists for struct `PendingRequest<'_, BufferedEndpointExecuteRecordsApiCx, EpUserHa48f81f001b893d2, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/buffered_endpoint_execute_records.rs:16:24
   |
 5 | / api! {
 6 | |     client BufferedEndpointExecuteRecordsApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET User
   | |____________- doesn't satisfy `_: RecordResponseEndpoint<BufferedEndpointExecuteRecordsApiCx>`
...
16 |       let _ = api.user().execute_records().await.unwrap();
   |                          ^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `EpUserHa48f81f001b893d2: RecordResponseEndpoint<BufferedEndpointExecuteRecordsApiCx>`
note: the trait `RecordResponseEndpoint` must be implemented
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   | pub trait RecordResponseEndpoint<Cx: ClientContext>: Endpoint<Cx> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
